--- a/SpringMvc_Demo/pom.xml
+++ b/SpringMvc_Demo/pom.xml
@@ -16,6 +16,8 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <spring.version>4.3.7.RELEASE</spring.version>
+    <jackson.version>2.8.8</jackson.version>
+    <shiro.version>1.4.0</shiro.version>
   </properties>
 
   <dependencies>
@@ -30,6 +32,16 @@
       <artifactId>spring-webmvc</artifactId>
       <version>${spring.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-spring</artifactId>
+          <version>${shiro.version}</version>
+      </dependency>
   </dependencies>
 
   <build>
